<resources>
    <string name="app_name">MovieTime</string>

    <string name="favourite_fragment">Favourite Fragment</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="favourite">Favourite</string>
    <string name="btn_try_again">TRY AGAIN</string>
    <string name="sorry_error_happen">Sorry some errors happened please try again</string>
    <string name="no_internet_message">Check your internet connection and try again</string>
    <string name="text_rating">Rating:</string>
    <string name="text_overview">Overview</string>
    <string name="poster_description">Movie Poster</string>
    <string name="no_internet_connection_layout">No Internet Connection Layout</string>
    <string name="text_trailers">Trailers</string>
    <string name="text_review">Review</string>
    <string name="title_author">Author: </string>
    <string name="title_movie_detail">Movie Information</string>
    <string name="message_empty_trailers">There is no Trailers for this Movie ~</string>
    <string name="message_empty_reviews">There is no reviews for this Movie ~</string>

</resources>
